--- a/bpm.ini
+++ b/bpm.ini
@@ -5,11 +5,11 @@ include=libarray
 description=Array manipulation functions, such as joining an array into a string and seeing if a value exists.
 
 [dependencies]
-0=assign
+assign=*
 
 [devDependencies]
-0=embed-docs
-1=unittest
+embed-docs=*
+unittest=*
 
 [scripts]
 readme=embed-docs README.md libarray
