Adding new function, `array::filter`

--- a/bpm.ini
+++ b/bpm.ini
@@ -1,11 +1,12 @@
 [package]
 name=array
-version=1.0.0
+version=1.1.0
 include=libarray
 description=Array manipulation functions, such as joining an array into a string and seeing if a value exists.
 
 [dependencies]
 assign=*
+strict=*
 
 [devDependencies]
 embed-docs=*
